# gr-ucrn

./: CMakeLists.txt  MANIFEST.md  README  README_MIGUEL
cmake/Modules/: ucrnConfig.cmake
docs/: README.ucrn
docs/doxygen/: Doxyfile.in
docs/doxygen/other/: group_defs.dox  main_page.dox
grc/: CMakeLists.txt  ucrn_amplificador.xml  ucrn_amplifier.xml
include/ucrn/: CMakeLists.txt  amplificador.h  amplifier.h  amplifier.h~  api.h
lib/: CMakeLists.txt  amplificador_impl.cc  amplificador_impl.cc~  amplificador_impl.h  amplifier_impl.cc  amplifier_impl.cc~  amplifier_impl.h  amplifier_impl.h~  qa_ucrn.cc  qa_ucrn.h  test_ucrn.cc
python/: CMakeLists.txt  __init__.py  qa_amplificador.py  qa_amplifier.py
swig/: CMakeLists.txt  ucrn_swig.i
